syntax = "proto3";

service ServiceDiscovery {
    rpc GetServiceInfo(ServiceInfoRequest) returns (ServiceInfoResponse);
}

message ServiceInfoRequest {
    string serviceName = 1; // Name of the service to query
}

message ServiceInfoResponse {
    string serviceAddress = 1; // Address of the service
    int32 servicePort = 2;     // Port of the service
}